Coursera/WhiteBelt/.metadata/.plugins/org.eclipse.cdt.ui/final_yb.build.log
23:47:29 **** Incremental Build of configuration Debug for project final_yb ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.cpp" 
In file included from ..\src\condition_parser.h:7,
                 from ..\src\main.cpp:13:
..\src\node.h:29:32: error: expected ')' before '&' token
   DateComparisonNode(Comparison& co, Date& d){}
                     ~          ^
                                )
In file included from ..\src\condition_parser.h:8,
                 from ..\src\main.cpp:13:
..\src\node.cpp:15:39: error: expected constructor, destructor, or type conversion before '(' token
 DateComparisonNode::DateComparisonNode(Comparison& comp, Date& date){}
                                       ^
In file included from ..\src\main.cpp:17:
..\src\database.cpp: In member function 'std::__cxx11::string& Database::Last(Date&)':
..\src\database.cpp:33:10: warning: reference to local variable 's' returned [-Wreturn-local-addr]
   string s;
          ^

23:47:31 Build Failed. 2 errors, 1 warnings. (took 1s.258ms)

